WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26757
Cusom binding for V8 DOM Storage is missing macro guard.
https://bugs.webkit.org/show_bug.cgi?id=26757
Summary
Cusom binding for V8 DOM Storage is missing macro guard.
Ben Murdoch
Reported
2009-06-26 09:15:24 PDT
As with other V8 bindings, the storage binding sources should be protected by a macro guard that represents if the feature is enabled or not.
Attachments
Patch.
(1014 bytes, patch)
2009-06-26 09:19 PDT
,
Ben Murdoch
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ben Murdoch
Comment 1
2009-06-26 09:19:35 PDT
Created
attachment 31936
[details]
Patch. Proposed fix.
Darin Fisher (:fishd, Google)
Comment 2
2009-06-26 09:27:34 PDT
Landed as
http://trac.webkit.org/changeset/45261
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug