2009-06-26  Ben Murdoch  <benm@google.com>

Reviewed by Darin Fisher.

        Add #if ENABLE(DOM_STORAGE) to the V8 custom bindings for local/session storage.
        https://bugs.webkit.org/show_bug.cgi?id=26757

        * bindings/v8/custom/V8StorageCustom.cpp



Canonical link: https://commits.webkit.org/36949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45261 268f45cc-cd09-0410-ab3c-d52691b4dbfc